--- a/emf-ui/app/src/index.css
+++ b/emf-ui/app/src/index.css
@@ -42,11 +42,18 @@ a:hover {
   color: #535bf2;
 }
 
+html,
 body {
   margin: 0;
   min-width: 320px;
-  min-height: 100vh;
+  height: 100%;
   width: 100%;
+  overflow: hidden;
+}
+
+#root {
+  height: 100%;
+  overflow: hidden;
 }
 
 h1 {
